--- a/package.json
+++ b/package.json
@@ -16,9 +16,12 @@
     "@mantine/hooks": "^8.1.3",
     "embla-carousel": "^8.6.0",
     "embla-carousel-react": "^8.6.0",
+    "mobx": "^6.13.7",
+    "mobx-react-lite": "^4.1.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
-    "react-router": "^7.6.3"
+    "react-router": "^7.6.3",
+    "vite-tsconfig-paths": "^5.1.4"
   },
   "devDependencies": {
     "@eslint/js": "^9.30.1",
