--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,25 @@
 {
-  "files": [],
-  "references": [
-    { "path": "./tsconfig.app.json" },
-    { "path": "./tsconfig.node.json" }
-  ]
+    "compilerOptions": {
+        "lib": ["DOM", "DOM.Iterable", "ESNext"],
+        "esModuleInterop": true,
+        "jsx": "react-jsx",
+        "baseUrl": ".",
+        "paths": {
+            "@/*": [
+                "src/*"
+            ],
+            "@pages/*": [
+                "src/pages/*"
+            ],
+            "@widgets/*": [
+                "src/widgets/*"
+            ],
+            "@shared/*": [
+                "src/shared/*"
+            ],
+            "@store/*": [
+                "src/app/store/*"
+            ]
+        }
+    }
 }
