--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,25 +1,41 @@
 {
     "compilerOptions": {
+        "tsBuildInfoFile": "./node_modules/.tmp/tsconfig.app.tsbuildinfo",
+        "target": "ES2022",
+        "useDefineForClassFields": true,
+        "module": "ESNext",
+        "skipLibCheck": true,
+
+        /* Bundler mode */
+        "moduleResolution": "bundler",
+        "allowImportingTsExtensions": true,
+        "verbatimModuleSyntax": true,
+        "moduleDetection": "force",
+        "noEmit": true,
+
+        /* Linting */
+        "strict": true,
+        "noUnusedLocals": true,
+        "noUnusedParameters": true,
+        "erasableSyntaxOnly": true,
+        "noFallthroughCasesInSwitch": true,
+        "noUncheckedSideEffectImports": true,
+
         "lib": ["DOM", "DOM.Iterable", "ESNext"],
         "esModuleInterop": true,
         "jsx": "react-jsx",
         "baseUrl": ".",
         "paths": {
-            "@/*": [
-                "src/*"
-            ],
-            "@pages/*": [
-                "src/pages/*"
-            ],
-            "@widgets/*": [
-                "src/widgets/*"
-            ],
-            "@shared/*": [
-                "src/shared/*"
-            ],
-            "@store/*": [
-                "src/app/taskStore/*"
-            ]
+            "@/*": ["src/*"],
+            "@pages/*": ["src/pages/*"],
+            "@widgets/*": ["src/widgets/*"],
+            "@shared/*": ["src/shared/*"],
+            "@store/*": ["src/app/taskStore/*"]
         }
-    }
+    },
+    "files": [],
+    "references": [
+        {"path": "./tsconfig.app.json"},
+        {"path": "./tsconfig.node.json"}
+    ]
 }
