--- a/package.json
+++ b/package.json
@@ -14,6 +14,9 @@
     "@mantine/core": "^8.1.3",
     "@mantine/form": "^8.1.3",
     "@mantine/hooks": "^8.1.3",
+    "@mantine/modals": "^8.1.3",
+    "@tanstack/react-query": "^5.83.0",
+    "@tanstack/react-query-devtools": "^5.83.0",
     "date-fns": "^4.1.0",
     "embla-carousel": "^8.6.0",
     "embla-carousel-react": "^8.6.0",
